--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /JWTCore2/bin/Debug/netcoreapp2.1
+/JWTCore2/obj
